Issue #7 Edit Operations - Basic

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         </div>
       </div>
       <button id="btnReset" class="btn btn-default">Reset!</button>
+      <button id="btnUndo" class="btn btn-default">Undo!</button>
+      <button id="btnRedo" class="btn btn-default">Redo!</button>
     </div>
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
